edit head name my1st

--- a/mystyle.css
+++ b/mystyle.css
@@ -71,7 +71,7 @@ img{
     font-family: Nata Sans;
 }
 
-.Product{
+.Arttoy{
     color: #fbfbfb;
     background-color: rgb(163, 218, 252);
     font-size: 35pt;
