--- a/mystyle.css
+++ b/mystyle.css
@@ -88,6 +88,15 @@ img{
     margin: 10px 0px;
     text-align: center;
 }
+
+.arttoy1{
+    text-align: center;
+    font-family: Rowdies;
+    font-size: 25pt;
+    margin: 10px 0px;
+    background-color: rgb(180, 251, 231);
+}
+
 .hirono{
     width: 500px;
     height: 500px;
