--- a/mystyle.css
+++ b/mystyle.css
@@ -97,6 +97,14 @@ img{
     background-color: rgb(180, 251, 231);
 }
 
+.decorations{
+    text-align: center;
+    font-family: Rowdies;
+    font-size: 25pt;
+    margin: 10px 0px;
+    background-color: rgb(249, 251, 151);
+}
+
 .hirono{
     width: 500px;
     height: 500px;
