--- a/mystyle.css
+++ b/mystyle.css
@@ -6,11 +6,13 @@ body{
     background-size: cover;
     margin: 0 auto;
     width: 65%;
+    display: flex;
 }
 
 .content{
     background-color: rgb(243, 231, 248);
-    padding: 30px;
+    padding: 20px;
+    margin-left: 100px;
 }
 
 header{
@@ -22,19 +24,29 @@ header{
 
 nav{
     padding: 10px 0;
+    width: 200px;
+    background-color: rgb(176, 168, 251);
+    min-height: 100vh;
+    padding-top: 20px;
+    position: fixed;
+    left: 0;
+    top: 0;
 }
 
 nav ul{
     list-style: none;
-    display: flex;
+    display: block;
     justify-content: center;
     gap: 20px;
 }
 
 nav ul a{
+    display: block;
     color: #fbfbfb;
     text-decoration: none;
     transition: 0.3s;
+    margin-bottom: 20px;
+    text-align: left;
 }
 
 nav a:hover{
