--- a/mystyle.css
+++ b/mystyle.css
@@ -100,6 +100,15 @@ img{
     text-align: center;
 }
 
+.decoration{
+    color: #fbfbfb;
+    background-color: rgb(255, 215, 159);
+    font-size: 35pt;
+    font-family: Rowdies;
+    margin: 10px 0px;
+    text-align: center;
+}
+
 .Product{
      color: #fbfbfb;
     background-color: rgb(163, 218, 252);
