--- a/mystyle.css
+++ b/mystyle.css
@@ -318,6 +318,14 @@ img{
     background-color: rgb(250, 214, 244);
 }
 
+.photoshelf{
+    width: 500px;
+    height: 500px;
+    display: block;
+    margin: auto;
+    padding: 20px;
+}
+
 .box1{
     font-size: 25pt;
     font-family: Rowdies;
