--- a/mystyle.css
+++ b/mystyle.css
@@ -356,6 +356,13 @@ img{
     background-color: rgb(250, 214, 244);
 }
 
+.bagn{
+    font-family: Rowdies;
+    font-size: 25pt;
+    text-align: center;
+    background-color: rgb(250, 230, 138);
+}
+
 .contact{
     text-align: center;
     font-size: 40px;
