--- a/mystyle.css
+++ b/mystyle.css
@@ -174,6 +174,13 @@ img{
     background-color: rgb(160, 247, 251);
 }
 
+.whitea{
+    font-size: 20pt;
+    font-family: Nata Sans;
+    text-indent: 2em;
+    background-color: #fbfbfb;
+}
+
 .crybaby{
     width: 500px;
     height: 500px;
