add photo background color index file

--- a/mystyle.css
+++ b/mystyle.css
@@ -357,6 +357,7 @@ img{
     display: block;
     margin: auto;
     padding: 20px;
+    background-color: rgb(231, 226, 150);
 }
 
 .box1{
@@ -466,6 +467,15 @@ img{
     margin: auto;
     padding: 20px;
     background-color: rgb(165, 204, 211);
+}
+
+.photoarttoy{
+    width: 500px;
+    height: 500px;
+    display: block;
+    margin: auto;
+    padding: 20px;
+    background-color: rgb(157, 224, 212);
 }
 
 video{
