--- a/mystyle.css
+++ b/mystyle.css
@@ -16,6 +16,14 @@ body{
 
 }
 
+.content2{
+    background-color: rgb(243, 231, 248);
+    padding: 20px;
+    margin-left: 100px;
+    width: 1000px;
+
+}
+
 header{
     background-color: rgb(209, 131, 242);
     color: #fbfbfb;
@@ -97,7 +105,7 @@ img{
 
 .Arttoy{
     color: #fbfbfb;
-    background-color: rgb(163, 218, 252);
+    background-color: rgb(104, 195, 252);
     font-size: 35pt;
     font-family: Rowdies;
     margin: 10px 0px;
@@ -106,7 +114,7 @@ img{
 
 .decoration{
     color: #fbfbfb;
-    background-color: rgb(255, 215, 159);
+    background-color: rgb(154, 137, 243);
     font-size: 35pt;
     font-family: Rowdies;
     margin: 10px 0px;
@@ -135,7 +143,7 @@ img{
     font-family: Rowdies;
     font-size: 25pt;
     margin: 10px 0px;
-    background-color: rgb(249, 251, 151);
+    background-color: rgb(248, 242, 135);
 }
 
 .hirono{
@@ -358,10 +366,13 @@ img{
 .photodec{
     width: 500px;
     height: 500px;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: auto;
     padding: 20px;
     background-color: rgb(231, 226, 150);
+
 }
 
 .box1{
