--- a/mystyle.css
+++ b/mystyle.css
@@ -435,12 +435,23 @@ img{
     text-align: center;
 }
 
-.contact{
+.contact1{
     text-align: center;
     font-size: 40px;
+    margin-bottom: 0px;
+    margin-top: 50px;
     color: beige;
-    margin: 20px 0px;
     background-color: rgb(247, 145, 142);
+    font-family: Rowdies;
+}
+
+.contact2{
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    color: rgb(247, 145, 142);
+    background-color: beige;
     font-family: Rowdies;
 }
 
