--- a/mystyle.css
+++ b/mystyle.css
@@ -82,6 +82,11 @@ img{
     height: auto;
 }
 
+#About{
+    border: 4px solid rgb(103, 94, 182);
+    padding: 4px;
+}
+
 .aboutus{
     background-color: rgb(135, 152, 247);
     color: #fbfbfb;
@@ -91,7 +96,7 @@ img{
     text-align: center;
 }
 
-.about{
+.about1{
     text-indent: 3em;
     background-color: rgb(254, 254, 253);
     margin: 8px;
