--- a/mystyle.css
+++ b/mystyle.css
@@ -83,7 +83,7 @@ img{
 }
 
 #About{
-    border: 4px solid rgb(103, 94, 182);
+    border: 4px dotted rgb(103, 94, 182);
     padding: 4px;
 }
 
@@ -522,5 +522,12 @@ video{
     margin: 20px 0px;
     background-color: rgb(247, 189, 142);
     font-family: Rowdies;
+}
 
+.video1{
+    border: 4px dotted rgb(197, 164, 109);
+    padding: 9px;
+    padding-top: 0px;
+    padding-bottom: 18px;
+    margin-top: 30px;
 }
