add padding in text 1st file

--- a/mystyle.css
+++ b/mystyle.css
@@ -173,6 +173,7 @@ img{
     font-family: Nata Sans;
     text-indent: 2em;
     background-color: #fbfbfb;
+    padding: 10px;
 }
 
 .hironop{
@@ -229,6 +230,7 @@ img{
     font-family: Nata Sans;
     text-indent: 2em;
     background-color: #fbfbfb;
+    padding: 10px;
 }
 
 .crybabyp{
@@ -260,6 +262,7 @@ img{
     font-size: 20pt;
     text-indent: 2em;
     background-color: #fbfbfb;
+    padding: 10px;
 }
 
 .hachipupup{
@@ -290,6 +293,7 @@ img{
     background-color: rgb(254, 254, 253);
     font-size: 20pt;
     text-indent: 2em;
+    padding: 10px;
 }
 
 .labubup{
@@ -320,6 +324,7 @@ img{
     font-family: Nata Sans;
     text-indent: 2em;
     background-color: #fbfbfb;
+    padding: 10px;
 }
 
 .mollyp{
@@ -350,6 +355,7 @@ img{
     font-family: Nata Sans;
     text-indent: 2em;
     background-color: #fbfbfb;
+    padding: 10px;
 }
 
 .skullpandap{
