--- a/mystyle.css
+++ b/mystyle.css
@@ -123,7 +123,8 @@ img{
     background-color: rgb(154, 137, 243);
     font-size: 50pt;
     font-family: Rowdies;
-    margin: 10px 0px;
+    margin: 0px;
+    margin-bottom: 40px;
     text-align: center;
 }
 
