--- a/mystyle.css
+++ b/mystyle.css
@@ -542,3 +542,34 @@ video{
     padding-bottom: 18px;
     margin-top: 30px;
 }
+
+.slider{
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.sliders{
+    display: flex;
+    width: 100%;
+    animation: slide 3s infinite;
+}
+
+.sliders img{
+    width: 100%;
+    height: auto;
+    flex-shrink: 0;
+}
+
+@keyframes slide {
+0%   { transform: translateX(0); }
+  25%  { transform: translateX(0); }
+
+  35%  { transform: translateX(-100%); }
+  60%  { transform: translateX(-100%); }
+
+  70%  { transform: translateX(-200%); }
+  95%  { transform: translateX(-200%); }
+
+  100% { transform: translateX(0); }
+}
